--- a/input.css
+++ b/input.css
@@ -20,3 +20,29 @@ body{
   border-color: ghostwhite;
   box-shadow: inset 0px 0px 20px 20px rgb(13 6 114 / 25%);
 }
+
+/* .forecast-card:hover{
+  transform: scale(1.05);
+  transition: transform 0.3s ease-in-out;
+}  */
+
+.custom-options{
+ display: none;
+  position: absolute;
+  top: 100%;
+  left: 0;
+  right: 0;
+  background-color: #fff;
+  border: 1px solid #ccc;
+  box-shadow: 0 4px 8px rgba(0,0,0,0.2);
+  z-index: 10;
+}
+
+/* .custom-option {
+  padding: 10px;
+  cursor: pointer;
+  display: block;
+} */
+/* .location-input:focus + .custom-options{
+  display: block;
+} */
