added error messages

--- a/output.css
+++ b/output.css
@@ -527,6 +527,9 @@ input:checked + .slider:before {
   transition: all 0.3s;
   cursor: pointer;
 }
+.error {
+  text-align: center;
+}
 @property --tw-border-style {
   syntax: "*";
   inherits: false;
